fix: Update login background image and adjust overflow styles for better layout

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -231,3 +231,12 @@ body {
         font-weight: 400;
     }
 }
+
+/* ======================================================= */
+/* == ESTILOS ADICIONALES  */
+/* ======================================================= */
+
+.login-body {
+    overflow-y: hidden; 
+
+}
